<resources>

    <string name="cantempty_nombre">Debe indicar el nombre del cliente</string>
    <string name="nombre_cliente">Nombre</string>
    <string name="toolong">Nombre demasiad largo!</string>
    <string name="cantempty_apellido1">Debe indicar el primer apellido del cliente</string>
    <string name="toolong_apellido1">Apellido demasiad largo!</string>
    <string name="cantempty_apodo">Debe indicar el apodo del cliente</string>
    <string name="toolong_apodo">Apodo demasiad largo!</string>
    <string name="cantempty_tasa">Debe indicar la tasa de interes</string>
    <string name="toolong_tasa">Tasa demasiado grande!</string>
    <string name="toolow_tasa">Tasa incorrecta!</string>
    <string name="toolow_monto">monto muy bajo!</string>
    <string name="toolong_monto">monto demasiado alto!</string>
    <string name="cantempty_monto">Debe indicar el monto del prestamo</string>
    <string name="toolow_cedula">Identificacion invalida!!!</string>
    <string name="toolong_cedula">Identificacion demasiado larga</string>
    <string name="cantempty_cedula">Debe indicar el numero de identificacion del cliente...</string>
    <string name="ID_cliente">Identificacion</string>
    <string name="apellido1">Primer apellido</string>
    <string name="apellido2">Segundo apellido</string>
    <string name="apodo">Apodo</string>
    <string name="bt_perdon">PERDONAR</string>
    <string name="bt_cierre">CIERRE</string>
    <string name="confirm">Confirmar</string>
    <string name="monto_cliente">Monto aprobado</string>
    <string name="tasa_cliente">Tasa de interes (%)</string>
    <string name="tasa_mora">Interes moratorio (%)</string>
    <string name="toolow_edad">Fecha invalida!</string>
    <string name="toolong_edad">Fecha invalida!</string>
    <string name="cantempty_edad">Debe indicar la fecha de nacimiento</string>
    <string name="fecha_nacimiento">Fecha de nacimiento dd/mm/aaaa</string>
    <string name="notas">Notas</string>
    <string name="cantempty_notas">Debe indicar una nota del cliente...</string>
    <string name="toolong_notas">Inforamcion incorrecta!!!</string>
    <string name="direccion_cliente">Direccion... </string>
    <string name="toolow_direccion">Direccion muy corta</string>
    <string name="toolong_direccion">Direccion demasiado larga</string>
    <string name="cantempty_direccion">Debe indicar la direccion exacta del cliente</string>
    <string name="puntuacion_cliente">Puntuacion... </string>
    <string name="toolow_puntuacion">Puntuacion muy corta</string>
    <string name="toolong_puntuacion">Puntuacion demasiado larga</string>
    <string name="cantempty_puntuacion">Debe indicar la direccion exacta del cliente</string>
    <string name="telefono_cliente"># de telefono... </string>
    <string name="telefono_cliente2">Telefono adicional... </string>
    <string name="toolow_telefono">Numero de telefono muy corto</string>
    <string name="toolong_telefono">Numero demasiado largo</string>
    <string name="cantempty_telefono">Debe indicar la direccion exacta del cliente</string>
    <string name="cliente">Cliente</string>
    <string name="credito">Credito</string>
    <string name="identificacion">Identificacion...</string>
    <string name="identificacion_tv">Digite la identificacion del cliente</string>
    <string name="consultar">CONSULTAR</string>
    <string name="bt_prestar">Nuevo credito</string>
    <string name="bt_re_prestar">Refinanciar</string>
    <string name="abonar">Abonar</string>
    <string name="recibir_fondos">Recibir fondos de Banca</string>
    <string name="abonar_fondos">Entregar dinero a Banca</string>
    <string name="recibir">RECIBIR</string>
    <string name="banca_reciv_entreg">ENTREGAR/RECIBIR FONDOS</string>
    <string name="monto...">Monto...</string>
    <string name="cambiar">Cambiar</string>
    <string name="guardar_cambios">Guardar cambios</string>
    <string name="editar">Editar</string>
    <string name="abonar_recibir">Digite el monto...</string>
    <string name="estado_cuenta">Ver estado de cuenta</string>
    <string name="fecha_registro">Fecha de registro del cliente</string>
    <string name="muy_joven">Acreedor debe ser mayor de 15 anios.</string>
    <string name="bt_personalizar">PERSONALIZAR CREDITO</string>
    <string name="app_name">El Chino</string>
    <string name="pedir_codigo_tv">Introduzca su codigo de cobrador...</string>
    <string name="pedir_codigo_et">CODIGO COBRADOR</string>
    <string name="mostrar_password">Mostrar password</string>
    <string name="submit">SUBMIT</string>
    <string name="bt_registrar">REGISTRAR CLIENTE NUEVO</string>
    <string name="bt_estado">ESTADO DEL CLIENTE</string>
    <string name="bt_abonar">ABONAR</string>
    <string name="bt_reFinanciar">RE-FINANCIAR</string>
    <string name="nuevo_credito">NUEVO CREDITO</string>
    <string name="no_hay_movimientos">Sin movimientos...</string>
    <string name="cedula_exists">El numero de cedula ingresado ya existe!</string>
    <string name="adelantarIntereses">Adelantar intereses</string>
    <string name="saludo_estado"> Estado del cliente</string>
    <string name="gastos_banca">GASTOS/VIATICOS</string>
    <string name="whatsapp">Compartir - Imprimir</string>
    <string name="btMorosos">VER MOROSOS</string>
    <string name="morosos">SIN CLIENTES MOROSOS...</string>
    <string name="cobrosHoy">PAGAN HOY</string>
    <string name="sinmorosos">Sin cobros para hoy...</string>
    <string name="btRepQuincenal">QUINCENAS</string>
    <string name="btRepMensual">MESES</string>
    <string name="sinclientesquincenales">Sin clientes quincenales...</string>
    <string name="sinclientesmensuales">Sin clientes mensuales...</string>
    <string name="et_gastos">Notas...</string>
    <string name="btActualizar">Actualizar</string>
    <string name="btMenu">MENU PRINCIPAL</string>

</resources>