<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#323BE415"
    tools:context=".Estado_clienteActivity">

    <TextView
        android:id="@+id/tv_fecha"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_saludoEstado"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/saludo_estado"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/bt_find_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:onClick="buscar_por_nombre"
        app:layout_constraintBottom_toTopOf="@+id/tv_esperar"
        app:layout_constraintEnd_toStartOf="@+id/tv_saludoEstado"
        app:layout_constraintHorizontal_bias="0.036"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tv_caja"
        app:layout_constraintVertical_bias="0.062"
        tools:text="@string/cambiar" />

    <Button
        android:id="@+id/bt_editar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="editar_archivo"
        android:text="@string/editar"
        app:layout_constraintBottom_toTopOf="@+id/bt_prestar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bt_estado_cuenta" />

    <Spinner
        android:id="@+id/sp_opciones"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/tv_esperar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bt_find_name" />

    <Button
        android:id="@+id/bt_consultar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="consultar"
        android:text="@string/consultar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_ID"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/tv_esperar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/identificacion_tv"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/et_ID"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.342" />

    <Button
        android:id="@+id/bt_estado_cuenta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="estado_cuenta"
        android:text="@string/estado_cuenta"
        app:layout_constraintBottom_toTopOf="@+id/bt_prestar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_saludoEstado"
        app:layout_constraintVertical_bias="0.846" />

    <EditText
        android:id="@+id/et_ID"
        android:layout_width="305dp"
        android:layout_height="48dp"
        android:hint="@string/identificacion"
        android:inputType="textPersonName|text|textCapWords"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.398" />

    <Button
        android:id="@+id/bt_prestar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="nuevo_credito"
        android:text="@string/bt_prestar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_esperar"
        app:layout_constraintVertical_bias="0.83" />

    <Button
        android:id="@+id/bt_represtar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bt_reFinanciar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_esperar"
        app:layout_constraintVertical_bias="0.83" />

    <Button
        android:id="@+id/bt_abonar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:onClick="abonar"
        android:text="@string/abonar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.447"
        app:layout_constraintStart_toEndOf="@+id/tv_saludoEstado"
        app:layout_constraintTop_toBottomOf="@+id/tv_saludoEstado" />

    <TextView
        android:id="@+id/tv_caja"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>