<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AbonarActivity">

    <EditText
        android:id="@+id/et_ID"
        android:layout_width="305dp"
        android:layout_height="48dp"
        android:hint="@string/identificacion"
        android:inputType="textPersonName|text|textCapWords"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.241" />

    <Spinner
        android:id="@+id/sp_plazos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/et_ID"
        app:layout_constraintEnd_toEndOf="@+id/et_ID"
        app:layout_constraintStart_toStartOf="@+id/et_ID"
        app:layout_constraintTop_toTopOf="@+id/et_ID" />

    <TextView
        android:id="@+id/tv_esperar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="12dp"
        android:text="@string/identificacion_tv"
        app:layout_constraintBottom_toTopOf="@+id/et_ID"
        app:layout_constraintStart_toStartOf="@+id/et_ID" />

    <Button
        android:id="@+id/bt_consultar_ab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="consultar"
        android:text="@string/consultar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_ID"
        app:layout_constraintVertical_bias="0.136" />

    <TextView
        android:id="@+id/tv_saludo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>