<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Registrar_cliente_nuevoActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|fill|fill_horizontal|fill_vertical|end"
        android:orientation="vertical"
        android:padding="10dp">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/ID_cliente"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:counterEnabled="true"
            app:counterMaxLength="15"
            app:counterOverflowTextColor="@color/red"
            app:counterTextColor="@color/green"
            app:errorEnabled="true"
            app:errorIconDrawable="@android:drawable/ic_dialog_alert"
            app:errorTextColor="@color/red">

            <com.google.android.material.textfield.TextInputEditText
                style="@style/TextAppearance.Material3.BodyMedium"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/ID_cliente"
                android:inputType="number" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/nombre_cliente"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:counterEnabled="true"
            app:counterMaxLength="12"
            app:counterOverflowTextColor="@color/red"
            app:counterTextColor="@color/green"
            app:errorEnabled="true"
            app:errorIconDrawable="@android:drawable/ic_dialog_alert"
            app:errorTextColor="@color/red">

            <com.google.android.material.textfield.TextInputEditText
                style="@style/TextAppearance.Material3.BodyMedium"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/nombre_cliente"
                android:inputType="textPersonName|textCapWords" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/apellido1_cliente"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:counterEnabled="true"
            app:counterMaxLength="15"
            app:counterOverflowTextColor="@color/red"
            app:counterTextColor="@color/green"
            app:errorEnabled="true"
            app:errorIconDrawable="@android:drawable/ic_dialog_alert"
            app:errorTextColor="@color/red">

            <com.google.android.material.textfield.TextInputEditText
                style="@style/TextAppearance.Material3.BodyMedium"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/apellido1"
                android:inputType="textPersonName|text|textCapWords" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/apellido2_cliente"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:counterEnabled="true"
            app:counterMaxLength="15"
            app:counterOverflowTextColor="@color/red"
            app:counterTextColor="@color/green"
            app:errorEnabled="true"
            app:errorIconDrawable="@android:drawable/ic_dialog_alert"
            app:errorTextColor="@color/red">

            <com.google.android.material.textfield.TextInputEditText
                style="@style/TextAppearance.Material3.BodyMedium"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/apellido2"
                android:inputType="textPersonName|text|textCapWords" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/apodo_cliente"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:counterEnabled="true"
            app:counterMaxLength="10"
            app:counterOverflowTextColor="@color/red"
            app:counterTextColor="@color/green"
            app:errorEnabled="true"
            app:errorIconDrawable="@android:drawable/ic_dialog_alert"
            app:errorTextColor="@color/red">

            <com.google.android.material.textfield.TextInputEditText
                style="@style/TextAppearance.Material3.BodyMedium"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/apodo"
                android:inputType="textPersonName|text|textCapWords" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/edad_cliente"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:counterEnabled="true"
            app:counterMaxLength="10"
            app:counterOverflowTextColor="@color/red"
            app:counterTextColor="@color/green"
            app:errorEnabled="true"
            app:errorIconDrawable="@android:drawable/ic_dialog_alert"
            app:errorTextColor="@color/red">

            <com.google.android.material.textfield.TextInputEditText
                style="@style/TextAppearance.Material3.BodyMedium"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/fecha_nacimiento"
                android:inputType="date" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/sexo_cliente"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:counterEnabled="true"
            app:counterMaxLength="6"
            app:counterOverflowTextColor="@color/red"
            app:counterTextColor="@color/green"
            app:errorEnabled="true"
            app:errorIconDrawable="@android:drawable/ic_dialog_alert"
            app:errorTextColor="@color/red">

            <com.google.android.material.textfield.TextInputEditText
                style="@style/TextAppearance.Material3.BodyMedium"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/sexo"
                android:inputType="text" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/direccion_cliente"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:counterEnabled="true"
            app:counterMaxLength="100"
            app:counterOverflowTextColor="@color/red"
            app:counterTextColor="@color/green"
            app:errorEnabled="true"
            app:errorIconDrawable="@android:drawable/ic_dialog_alert"
            app:errorTextColor="@color/red">

            <com.google.android.material.textfield.TextInputEditText
                style="@style/TextAppearance.Material3.BodyMedium"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/direccion_cliente"
                android:inputType="text" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tasa_cliente"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:counterEnabled="true"
            app:counterMaxLength="3"
            app:counterOverflowTextColor="@color/red"
            app:counterTextColor="@color/green"
            app:errorEnabled="true"
            app:errorIconDrawable="@android:drawable/ic_dialog_alert"
            app:errorTextColor="@color/red">

            <com.google.android.material.textfield.TextInputEditText
                style="@style/TextAppearance.Material3.BodyMedium"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/tasa_cliente"
                android:inputType="number" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/monto_disponible"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:counterEnabled="true"
            app:counterMaxLength="8"
            app:counterOverflowTextColor="@color/red"
            app:counterTextColor="@color/green"
            app:errorEnabled="true"
            app:errorIconDrawable="@android:drawable/ic_dialog_alert"
            app:errorTextColor="@color/red">

            <com.google.android.material.textfield.TextInputEditText
                style="@style/TextAppearance.Material3.BodyMedium"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/monto_cliente"
                android:inputType="number" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/interes_mora"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:counterEnabled="true"
            app:counterMaxLength="3"
            app:counterOverflowTextColor="@color/red"
            app:counterTextColor="@color/green"
            app:errorEnabled="true"
            app:errorIconDrawable="@android:drawable/ic_dialog_alert"
            app:errorTextColor="@color/red">

            <com.google.android.material.textfield.TextInputEditText
                style="@style/TextAppearance.Material3.BodyMedium"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/tasa_mora"
                android:inputType="number" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/puntuacion_cliente"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:counterEnabled="true"
            app:counterMaxLength="1"
            app:counterOverflowTextColor="@color/red"
            app:counterTextColor="@color/green"
            app:errorEnabled="true"
            app:errorIconDrawable="@android:drawable/ic_dialog_alert"
            app:errorTextColor="@color/red">

            <com.google.android.material.textfield.TextInputEditText
                style="@style/TextAppearance.Material3.BodyMedium"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/puntuacion_cliente"
                android:inputType="number" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/bt_confirmar"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:onClick="confirm"
            android:text="@string/confirm" />

        <TextView
            android:id="@+id/tv_esperar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/et_ID"
            app:layout_constraintStart_toStartOf="@+id/et_ID" />

        <EditText
            android:id="@+id/et_ID"
            android:layout_width="305dp"
            android:layout_height="48dp"
            android:inputType="textPersonName|text|textCapWords"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.49" />

    </LinearLayout>


</ScrollView>